--- a/pruning_distillation_pipeline.ipynb
+++ b/pruning_distillation_pipeline.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install -r requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,8 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install evaluate\n",
-    "\n",
     "from evaluate import evaluator\n",
     "from transformers import pipeline\n",
     "\n",
@@ -201,9 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Load Local model"
    ]
@@ -264,21 +269,21 @@
     "from datasets import load_dataset, load_from_disk\n",
     "\n",
     "#main_model = \"google-bert/bert-base-uncased\"\n",
-    "#main_model = \"textattack/bert-base-uncased-SST-2\"\n",
-    "#tiny_bert_id = \"google/bert_uncased_L-2_H-128_A-2\"\n",
-    "#teacher_id = main_model # The main model will also be our teacher for model distillation\n",
+    "main_model = \"textattack/bert-base-uncased-SST-2\"\n",
+    "tiny_bert_id = \"google/bert_uncased_L-2_H-128_A-2\"\n",
+    "teacher_id = main_model # The main model will also be our teacher for model distillation\n",
     "\n",
-    "#tokenizer = AutoTokenizer.from_pretrained(main_model) # We use the same tokenizer throughout all models. It becomes more important for distilliation\n",
+    "tokenizer = AutoTokenizer.from_pretrained(main_model) # We use the same tokenizer throughout all models. It becomes more important for distilliation\n",
     "#tokenizer.save_pretrained('./tokenizer')\n",
-    "tokenizer = AutoTokenizer.from_pretrained('./tokenizer')\n",
+    "#tokenizer = AutoTokenizer.from_pretrained('./tokenizer')\n",
     "\n",
-    "#dataset_id=\"glue\"\n",
-    "#dataset_config=\"sst2\"\n",
+    "dataset_id=\"glue\"\n",
+    "dataset_config=\"sst2\"\n",
     "\n",
-    "#dataset = load_dataset(dataset_id,dataset_config)\n",
-    "local_dataset_path = \"./sst2\"  # save dataset locally for showcase purposes\n",
+    "dataset = load_dataset(dataset_id,dataset_config)\n",
+    "#local_dataset_path = \"./sst2\"  # save dataset locally for showcase purposes\n",
     "#dataset.save_to_disk(local_dataset_path)\n",
-    "dataset = load_from_disk(local_dataset_path)\n",
+    "#dataset = load_from_disk(local_dataset_path)\n",
     "\n",
     "dataset\n",
     "\n",
@@ -295,9 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Load External BERT Model"
    ]
@@ -346,7 +349,7 @@
    "source": [
     "# Structural Pruning\n",
     "\n",
-    "In the following, the **Attention Heads** and the **intermediate layers** of the original BERT model are structurally pruned based on the **smallest magnitude weights**. All Attention layers are retained. The **hidden-size** is reduced **from 768 to 384** and the **intermediate-size** is reduced **from 3072 to 1536**. The hidden-size represents the **Query, Key and Value** matricies and the intermediate-size the **intermediate layers**. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is **reduced from 109M to 33M**, a reduction of about **70%**.\n",
+    "In the following, the **Attention Heads** and the **intermediate layers** of the original BERT model are structurally pruned based on the **smallest magnitude weights**. All Attention layers are retained. The **attention layers** are reduced **from 768 to 384** and the **intermediate-size** is reduced **from 3072 to 1536**. In addition, the pooling and classification layers are configured for training. In total, the number of parameters is **reduced from 109M to 33M**, a reduction of about **70%**.\n",
     "\n",
     "This pruning is based on the work of https://github.com/VainF/Torch-Pruning."
    ]
@@ -371,14 +374,13 @@
     }
    ],
    "source": [
-    "#!pip install torch-pruning\n",
     "from transformers import AutoTokenizer, BertModel, BertForSequenceClassification\n",
     "import torch\n",
     "from transformers.models.bert.modeling_bert import BertSelfAttention, BertPooler\n",
     "import torch_pruning as tp\n",
     "\n",
-    "#pruned_model = load_external_model(main_model, set_size=True)\n",
-    "pruned_model = load_local_model(\"./teacher_model\") # For Showcase purposes\n",
+    "pruned_model = load_external_model(main_model, set_size=True)\n",
+    "#pruned_model = load_local_model(\"./teacher_model\") # For Showcase purposes\n",
     "\n",
     "hf_inputs = tokenizer(\"Hello, my dog is cute\", return_tensors=\"pt\")\n",
     "example_inputs = {'input_ids': hf_inputs['input_ids'], 'token_type_ids': hf_inputs['token_type_ids'], 'attention_mask': hf_inputs['attention_mask']}\n",
@@ -521,9 +523,6 @@
     }
    ],
    "source": [
-    "# Evalutation METRICS\n",
-    "#%pip install evaluate\n",
-    "#%pip install scikit-learn\n",
     "from transformers import AutoTokenizer, BertModel, BertForSequenceClassification, EarlyStoppingCallback, BertConfig, AutoModel\n",
     "import torch\n",
     "from transformers.models.bert.modeling_bert import BertSelfAttention, BertPooler\n",
@@ -585,9 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Pruned Model"
    ]
@@ -795,9 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Pruned Model"
    ]
@@ -980,9 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Tiny-BERT Model"
    ]
@@ -1025,58 +1018,6 @@
     "The following part contains the training procedure of the **task-specific distillation training**. The **teacher** model in both cases is the original **BERT-Model** and the **student** models are each the untrained **pruned** and **Tiny-BERT** models. The teacher model is **task-specific** because it was pre-trained and fine-tuned on the **SST-2** dataset.\n",
     "\n",
     "The Knowledge Destillation training is based on the work of https://github.com/philschmid/knowledge-distillation-transformers-pytorch-sagemaker/tree/master."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 17,
-     "referenced_widgets": [
-      "bff16c2ebe664ea0a5a6db092479a13e",
-      "6809f655ce864e8dbb4d7654c151a9d1",
-      "a80803013eca4d84a374335accea3155",
-      "cc716c94629041c9a03e3ac5e9dab37e",
-      "278d372dc17c4cf496c7b637ea90f6fe",
-      "8e0a5b2037e54c5d9adf1fa3099973e4",
-      "f66e5315c7264b83a846b648e72986c1",
-      "c23a617facfd4c00820d8e7c706d72d6",
-      "f56237dc66ab4c759aa347376ba8fb24",
-      "8092127b92c1491c9f2aaf241e110f5a",
-      "b2ab1acefc5e47a7afc77ea660f6c61f",
-      "7002b3f4246549c9afb7c1aa22c2e860",
-      "fb67be4b04ca4aabab80ce4507ccc468",
-      "f0c121507ed14573be5a11d09387aab3",
-      "72b68d8c65d74104911106bd6944a4e8",
-      "c4e7ce102db34f0a9e6beee2fb479848",
-      "3dd733fd5a2e4f7ea3e828a7124dff0d",
-      "012df5756e1b471e84e29512967f9c64",
-      "0c566fef7b574638a772f593bdd56d72",
-      "72d21bf0456c444fbf853fd1f73a1ab9"
-     ]
-    },
-    "executionInfo": {
-     "elapsed": 860,
-     "status": "ok",
-     "timestamp": 1734529679438,
-     "user": {
-      "displayName": "Christoph Knaden",
-      "userId": "07786541951617304082"
-     },
-     "user_tz": -60
-    },
-    "id": "Dr5DMhK6BY1k",
-    "outputId": "82064e01-664c-4107-bf34-6f402914080e"
-   },
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import login\n",
-    "\n",
-    "repo_name = \"sst2-distillation\" # set name for repository on huggingface\n",
-    "\n",
-    "#login()"
    ]
   },
   {
@@ -1147,7 +1088,6 @@
    },
    "outputs": [],
    "source": [
-    "#%pip install torch torchvision torchaudio\n",
     "import importlib\n",
     "import custom_args\n",
     "importlib.reload(custom_args)\n",
@@ -1224,8 +1164,6 @@
    },
    "outputs": [],
    "source": [
-    "#%pip install transformers[torch]\n",
-    "#%pip install \"accelerate==1.2.1\"\n",
     "from transformers import DataCollatorWithPadding\n",
     "from huggingface_hub import HfFolder\n",
     "\n",
@@ -1453,9 +1391,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Pruned Model"
    ]
@@ -1667,9 +1603,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Tiny-BERT"
    ]
@@ -1718,31 +1652,6 @@
     "## Hyperparameter Search for Distillation parameter `alpha` & `temperature` with optuna\n",
     "\n",
     "To **optimize the parameter search** for `alpha` & `temperature`, optuna can help to find them. Since it is a bit **random** and the more time and resources you have, the better your results will be, this is just an example of what is possible."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 5674,
-     "status": "ok",
-     "timestamp": 1734534027995,
-     "user": {
-      "displayName": "Christoph Knaden",
-      "userId": "07786541951617304082"
-     },
-     "user_tz": -60
-    },
-    "id": "pdDmDjrmBY1o",
-    "outputId": "e5d6e5f8-3cac-45b1-c006-99b66603cdd9"
-   },
-   "outputs": [],
-   "source": [
-    "#%pip install optuna"
    ]
   },
   {
@@ -2197,9 +2106,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Pruned Model"
    ]
@@ -2598,9 +2505,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Save and Load Tiny-BERT"
    ]
